tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: Integer = 2
let foo = (_: String): String => "Hello"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_3.kk:2:5
  │
2 │ let foo = (_: String): String => "Hello"
  │     ^^^ Duplicated name
  │
  = This variable is already declared before in this namespace.
